Add character showcase section with interactive tabs and styles

--- a/index.html
+++ b/index.html
@@ -41,6 +41,39 @@
             <a href="gallery.html">Gallery</a>
             <div class="nav-indicator"></div>
         </nav>
+
+        <!-- Character Showcase Section -->
+        <section class="character-showcase">
+            <div class="character-card">
+                <div class="character-info">
+                    <h2 class="character-name">Uyên</h2>
+                    <div class="character-stars">⭐⭐⭐⭐⭐</div>
+                    <p class="character-description">A precious friend in this vast world, bringing joy and warmth to those around her...</p>
+                </div>
+                <div class="character-preview">
+                    <img src="assets/images/moment1.jpg" alt="Character Preview" class="character-image">
+                </div>
+                <div class="character-tabs">
+                    <div class="tab-button active" data-image="assets/images/moment1.jpg">
+                        <img src="assets/images/moment1.jpg" alt="Uyên">
+                        <span>Uyên</span>
+                    </div>
+                    <div class="tab-button" data-image="assets/images/moment2.jpg">
+                        <img src="assets/images/moment2.jpg" alt="Uyên">
+                        <span>Uyên</span>
+                    </div>
+                    <div class="tab-button" data-image="assets/images/moment3.jpg">
+                        <img src="assets/images/moment3.jpg" alt="Uyên">
+                        <span>Uyên</span>
+                    </div>
+                    <div class="tab-button" data-image="assets/images/moment4.jpg">
+                        <img src="assets/images/moment4.jpg" alt="Uyên">
+                        <span>Uyên</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Wishes Section -->
         <section class="wishes-section" data-aos="fade-up">
             <div class="wish-container">
@@ -64,7 +97,7 @@
 
         <!-- New Regions Section -->
         <section class="regions-section">
-            <h2 class="section-title golden-text">New Regions</h2>
+            <h2 class="section-title golden-text">Kỷ niệm</h2>
             <div class="regions-slider">
                 <div class="region-card active" style="background-image: url('assets/images/region1.jpg')">
                     <div class="region-info">
@@ -81,7 +114,7 @@
 
         <!-- More Info Section -->
         <section class="more-info-section">
-            <h2 class="section-title golden-text">More Info</h2>
+            <h2 class="section-title golden-text">Xinh gái</h2>
             <div class="swiper-container info-slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -97,6 +130,11 @@
                     <div class="swiper-slide">
                         <div class="info-card">
                             <img src="assets/images/moment3.jpg" alt="Khoảnh khắc 3">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="info-card">
+                            <img src="assets/images/moment4.jpg" alt="Khoảnh khắc 4">
                         </div>
                     </div>
                 </div>
