--- a/layout.html
+++ b/layout.html
@@ -24,13 +24,13 @@
     <!-- Navigation -->
     <nav class="main-nav">
         <div class="nav-brand">
-            <a href="index.html">
+            <a href="home.html">
                 <span class="brand-icon">🎂</span>
                 <span class="brand-text">Birthday</span>
             </a>
         </div>
         <div class="nav-links">
-            <a href="index.html">Trang chủ</a>
+            <a href="home.html">Trang chủ</a>
             <a href="cake.html">Bánh kem</a>
             <a href="photo.html">Chụp ảnh</a>
             <a href="gallery.html">Gallery</a>
@@ -50,7 +50,7 @@
             <div class="footer-section">
                 <h3 class="footer-title">Liên kết</h3>
                 <ul class="footer-links">
-                    <li><a href="index.html">Trang chủ</a></li>
+                    <li><a href="home.html">Trang chủ</a></li>
                     <li><a href="cake.html">Bánh kem</a></li>
                     <li><a href="photo.html">Chụp ảnh</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
