Update Vietnamese text in login and scroll indicator; enhance character showcase styles and transitions

--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="scroll-indicator">
                     <span class="mouse"></span>
-                    <p>Scroll to Explore</p>
+                    <p>Lướt xuống tiếp đi</p>
                 </div>
             </section>
 
